--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>GRR Rapid Response Release Notes - Published by Splunk April 04, 2022</b>
+<b>GRR Rapid Response Release Notes - Published by Splunk April 08, 2022</b>
 <br><br>
+<b>Version 2.0.5 - Released April 08, 2022</b>
+<ul>
+<li>Marked the app as FIPS Compliant [PAPP-21848]</li>
+</ul>
 <b>Version 2.0.3 - Released March 08, 2021</b>
 <ul>
 <li>Compatibility changes for Python 3 support</li>
